feat: adding api retrieve current mapproxy yaml configuration
